# Vinyl_Models

./: .env  .gitignore  CHANGELOG.md  README.md  pyproject.toml  runTests.sh  setupEnv.sh
.github/workflows/: Test_build_deploy_ci.yml  build_and_deploy.yml  check_version.yml  check_version_test_deploy_dev.yml  update_db_on_merge.yml
scripts/: check_version.py
supabase/: config.toml
supabase/migrations/: 20250418113927__V0.0.1__setup_schema.sql  20250418123927__V0.1.0__add_price_currency_tables.sql  20250418153927__V0.3.0__add_buy_availibility_tables.sql  20250419081000__V0.4.0__add_record_table.sql  20250419081947__V0.5.0__add_tracks_table.sql  20250419083525__V0.6.0__add_price_history_table.sql  20250419084425__V0.6.1__alter_datetime_contraints.sql  20250419091000__V0.7.0__drop_and_add_record_table_redo.sql  20250419092320__V0.7.1__alter_buy_price_table.sql  20250419092837__V0.8.0__drop_buy_price_table.sql  20250419093539__V0.8.1__add_missing_fk.sql  20250420130949__V0.9.0__fix_typo_in_fk__record__buy_price.sql  20250420135009__V0.9.1__amend_music_genre_enum.sql  20250421094208__0.10.0__add_public_read_service_all_access.sql
supabase/seed/: 001__seed_financial_data.sql
supabase/vinyl_models/: prod_models.py
tests/unit/: test_prod_models.py
vinyl_models/: prod_models.py
vinyl_models/sql/: V0.0.1__setup_schema.sql  V0.1.0__add_price_currency_tables.sql  V0.1.1__add_currency_exchange_table.sql  V0.3.0__add_buy_availibility_tables.sql  v0.2.0__add_record_table.sql
