[project]
name = "image-search"
version = "0.1.0"
description = "Image Search with Supabase Vector"
authors = [
    { name = "thorwebdev", email = "thor@supabase.io" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers>=2.2.2,<3.0.0",
    "vecs>=0.2.4,<0.3.0",
    "matplotlib>=3.7.1,<4.0.0",
    "sqlalchemy",
    "supabase"
]

[project.scripts]
seed = "image_search.main:seed"
search = "image_search.main:search"

[tool.hatch.build]
packages = ["image_search"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
