[project]
name = "vinyl-models"
version = "0.1.0"
description = "Image Search with Supabase Vector"
authors = [
    { name = "thorwebdev", email = "thor@supabase.io" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers>=2.2.2,<3.0.0",
    "vecs>=0.2.4,<0.3.0",
    "matplotlib>=3.7.1,<4.0.0",
    "sqlalchemy>=1.4.0,<3.0.0",   # Be explicit on compatibility
    "supabase"                   # Add version constraint if needed
]

[project.optional-dependencies]
dev = [
    "ruff",                      # For linting
    "pytest",
    "ipython",
    "sqlfluff",
    "dotenv",
]

[tool.hatch.build]
packages = ["vinyl_models"]

[tool.hatch.metadata]
allow-implicit-optional-dependencies = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
